added react grid system. 1st mock working

--- a/app/containers/HomePage/style.scss
+++ b/app/containers/HomePage/style.scss
@@ -30,3 +30,19 @@
     margin-left: 0.4em;
   }
 }
+
+
+.jobCard{
+  // font-size: 14px;
+  margin-bottom: 20px !important;
+  padding: 5px all !important;
+}
+
+.jobURL{
+  text-decoration: none;
+}
+
+.searchBar{
+  margin: 20px;
+  padding: 5px;
+}
