updated style for github link button

--- a/app/containers/HomePage/style.scss
+++ b/app/containers/HomePage/style.scss
@@ -46,3 +46,11 @@
   margin: 20px;
   padding: 5px;
 }
+
+.githubLink{
+  text-decoration: none;
+}
+
+// .githubButton{
+//   background-color: white;
+// }
